fixing computer generated contrast issue

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -94,7 +94,7 @@
 }
 
 .hero h1 {
-    background-color: rgba(251 126 78 / .3);
+    background-color: rgba(26 42 73 / .5);
 }
 
 .hero img {
@@ -108,6 +108,7 @@
     float: right;
     margin: 0 0 1rem 1rem;
     text-align: justify;
+    
 }
 
 .hero-text img {
@@ -118,6 +119,7 @@
     box-shadow: 0 0 30px #5F9747;
     float: right;
     margin: 0 0 1rem 1rem;
+    
 }
 
 header {
